feat: add missing information to release

--- a/src/components/softwareSkills/SoftwareSkill.scss
+++ b/src/components/softwareSkills/SoftwareSkill.scss
@@ -15,8 +15,17 @@
   margin-bottom: 20px;
 }
 
+.software-skill-inline > i.mdi {
+  margin-bottom: 0px;
+}
+
+.software-skill-inline > i.fab {
+  margin-bottom: 10px;
+}
+
 .software-skill-inline > i {
   color: $subTitle;
+  display: inline-block;
 }
 
 .software-skill-inline > i:hover {
